break css issue

--- a/partials/edit-character.html
+++ b/partials/edit-character.html
@@ -100,7 +100,7 @@
 		</div>
 		<!-- SKILLS -->
 			<h3>Skills</h3>
-			<label>Search Skills: <input ng-model="searchSkills"></label>
+			<label>Search Skills: <input ng-model="searchSkills"></label><br>
 		CLICK TO OPEN:
 				<input type=checkbox ng-model=skillscollapse value="None" id="slideOne" name="check">
 				<label for="slideOne"></label>
@@ -114,7 +114,7 @@
 		</div>
 		<!-- FEATS -->
 			<h3>Feats</h3>
-			<label>Search Feats: <input ng-model="searchFeats"></label>
+			<label>Search Feats: <input ng-model="searchFeats"></label><br>
 			CLICK TO OPEN:
 				<input type=checkbox ng-model=featscollapse value="None" id="slideTwo" name="check">
 				<label for="slideTwo"></label>
@@ -130,7 +130,7 @@
 		<!-- EQUIPMENT -->
 			<!-- EQUIPMENT -->
 			<h3>Equipment</h3>
-			<label>Search Equipment: <input ng-model="searchEquip"></label>
+			<label>Search Equipment: <input ng-model="searchEquip"></label><br>
 			CLICK TO OPEN:
 				<input type=checkbox ng-model=equipmentcollapse value="None" id="slideThree" name="check">
 				<label for="slideThree"></label>
@@ -156,7 +156,7 @@
 		</div>
 		<!-- SPELLS -->
 			<h3>Spells</h3>
-			<label>Search Spells: <input ng-model="searchSpells"></label>
+			<label>Search Spells: <input ng-model="searchSpells"></label><br>
 			CLICK TO OPEN:
 				<input type=checkbox ng-model=spellscollapse value="None" id="slideFour" name="check">
 				<label for="slideFour"></label>
