--- a/partials/character-creator.html
+++ b/partials/character-creator.html
@@ -127,7 +127,7 @@
 		</div>
 		<!-- SKILLS -->
 			<h3>Skills</h3>
-			<label>Search Skills: <input ng-model="searchSkills"></label>
+			<label>Search Skills: <input ng-model="searchSkills"></label><br>
 		CLICK TO OPEN:
 				<input type=checkbox ng-model=skillscollapse value="None" id="slideOne" name="check">
 				<label for="slideOne"></label>
@@ -141,7 +141,7 @@
 		</div>
 		<!-- FEATS -->
 			<h3>Feats</h3>
-			<label>Search Feats: <input ng-model="searchFeats"></label>
+			<label>Search Feats: <input ng-model="searchFeats"></label><br>
 			CLICK TO OPEN:
 				<input type=checkbox ng-model=featscollapse value="None" id="slideTwo" name="check">
 				<label for="slideTwo"></label>
@@ -157,7 +157,7 @@
 		<!-- EQUIPMENT -->
 			<!-- EQUIPMENT -->
 			<h3>Equipment</h3>
-			<label>Search Equipment: <input ng-model="searchEquip"></label>
+			<label>Search Equipment: <input ng-model="searchEquip"></label><br>
 			CLICK TO OPEN:
 				<input type=checkbox ng-model=equipmentcollapse value="None" id="slideThree" name="check">
 				<label for="slideThree"></label>
@@ -183,7 +183,7 @@
 		</div>
 		<!-- SPELLS -->
 			<h3>Spells</h3>
-			<label>Search Spells: <input ng-model="searchSpells"></label>
+			<label>Search Spells: <input ng-model="searchSpells"></label><br>
 			CLICK TO OPEN:
 				<input type=checkbox ng-model=spellscollapse value="None" id="slideFour" name="check">
 				<label for="slideFour"></label>
