--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -27,10 +27,10 @@
 		P.S. Please excuse gabs in equipment data. The API I am using has some errors. Version two will fix the problem. 
 		</p>
 	<section id="login-section">
-		<div class="login-google">
+		<div class="login-google" id="logInBtn">
 	    	<button type="button" class="btn btn-default" ng-click="logInGoogle()">Log In With Google</button>
 		</div>
-		<div class="logOut">
+		<div class="logOut" id="logOutBtn">
 	    	<button type="button" class="btn btn-default" ng-click="logOut()">Log Out</button>
 		</div>
 	</section>
