fixed text area in single character

--- a/partials/single-character.html
+++ b/partials/single-character.html
@@ -79,7 +79,7 @@
 			<p ng-model="character.region">{{character.region}}</p><br><br>
 		</div>
 	</div>
-	<div id="notesArea">
+	<div>
 		<textarea rows="20" cols="20"></textarea>
 	</div>
 </div>
